name:                pddl
version:             0.1.0.0
synopsis:            A PDDL parser in haskell
homepage:            https://github.com/elliottt/pddl
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.10
description:
  A parser for the planning domain definition language, version 3.1.

library
  exposed-modules:     Text.PDDL
                       Text.PDDL.Types
  build-depends:       base >=4.7 && <5,
                       text,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
